# IBKRust

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/routes/: mod.rs
frontend/templates/: index.html
src/: lib.rs  main.rs
src/routes/: mod.rs
